kubernetes/netdata/helm/netdata/parent/deployment.yaml
---
# Source: netdata/templates/parent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netdata-parent
  namespace: netdata
  labels:
    app: netdata
    chart: netdata-3.7.174
    release: netdata
    heritage: Helm
    role: parent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netdata
      release: netdata
      role: parent
  template:
    metadata:
      labels:
        app: netdata
        release: netdata
        role: parent
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        fsGroup: 201
      serviceAccountName: netdata
      containers:
        - name: netdata
          image: "netdata/netdata:v2.11.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 19999
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /usr/sbin/netdatacli
              - ping
            initialDelaySeconds: 0
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - /usr/sbin/netdatacli
              - ping
            initialDelaySeconds: 0
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - name: os-release
              mountPath: /host/etc/os-release
            - name: configmap
              mountPath: /etc/netdata/go.d.conf
              subPath: go.d
            - name: configmap
              mountPath: /etc/netdata/go.d/prometheus.conf
              subPath: go.d-prometheus
            - name: configmap
              mountPath: /etc/netdata/health_alarm_notify.conf
              subPath: health
            - name: configmap
              mountPath: /etc/netdata/netdata.conf.tmpl
              subPath: netdata
            - name: configmap
              mountPath: /etc/netdata/stream.conf.tmpl
              subPath: stream
            - name: database
              mountPath: /var/cache/netdata
            - name: alarms
              mountPath: /var/lib/netdata
            - mountPath: /var/cache/netdata/dbengine
              name: dbengine
            - mountPath: /etc/netdata/stream.conf
              name: stream-conf
              subPath: stream.conf
            - mountPath: /etc/netdata/ssl
              name: streaming-tls
              readOnly: true
            - mountPath: /etc/netdata/netdata.conf
              name: netdata-conf
              subPath: netdata.conf
          resources:
            {}
      terminationGracePeriodSeconds: 300
      volumes:
        - name: os-release
          hostPath:
            path: /etc/os-release
        - name: configmap
          configMap:
            name: netdata-conf-parent
            optional: true
        - name: configsecret
          secret:
            secretName: netdata-conf-parent
            optional: true
        - name: database
          persistentVolumeClaim:
            claimName: netdata-parent-database
        - name: alarms
          persistentVolumeClaim:
            claimName: netdata-parent-alarms
        - name: dbengine
          persistentVolumeClaim:
            claimName: netdata-parent-dbengine
        - emptyDir: {}
          name: stream-conf
        - name: streaming-tls
          secret:
            secretName: netdata-streaming-tls
        - emptyDir: {}
          name: netdata-conf
      dnsPolicy: ClusterFirst
