kubernetes/netdata/helm/netdata/parent/ingress.yaml
---
# Source: netdata/templates/parent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
    chart: netdata-3.7.174
    release: netdata
    heritage: Helm
  annotations:
    ak-type: simple
    cert-manager.io/cluster-issuer: zerossl
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: netdata.png
    gethomepage.dev/name: Netdata
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - netdata.k.oneill.net
      secretName: netdata-tls
  rules:
    - host: netdata.k.oneill.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  name: http
